# lk-autocorrect

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  main.yml  publish.yml
src/: __init__.py  autocorrect.ps1  autocorrect.sh  cli.py  matcher.py
